# python-scrapy

./: .gitignore  Dockerfile  README.md  README.rst  pyproject.toml
.github/workflows/: ci.yml
python_scrapy/: items.py  middlewares.py  pipelines.py  settings.py
python_scrapy/spiders/: spider.py
tests/: python_scrapy_test.py
