[tool.poetry]
name = "python-scrapy"
version = "0.1.0"
description = ""
authors = ["Paulo Henrique Nonaka <paulononaka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
pre-commit = "^2.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
